[CORL-743] Fix sort menu on small screens (#2698)
* fix: sort menu on small screens

* chore: add comments

--- a/src/core/client/ui/components/SelectField/SelectField.css
+++ b/src/core/client/ui/components/SelectField/SelectField.css
@@ -26,6 +26,7 @@
   outline: none;
   color: var(--palette-text-primary);
   width: 100%;
+  font-family: system-ui !important;
 
   &::-moz-focus-inner {
     border: 0;
